--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,6 +8,7 @@ if (Boost_FOUND)
     add_executable(test
                    test.cpp
                    edit_distance.cpp
+                   edit_alignment.cpp
                   )
     include_directories(${Boost_INCLUDE_DIR})
     target_link_libraries(test ${Boost_LIBRARIES})
