--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,3 @@
 include_directories(${edit_distance_SOURCE_DIR}/include)
 
-#add_executable(x01_hello_world x01_hello_world.cpp)
+add_executable(x01_edit_distance x01_edit_distance.cpp)
