--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,4 @@
 include_directories(${edit_distance_SOURCE_DIR}/include)
 
 add_executable(x01_edit_distance x01_edit_distance.cpp)
+add_executable(x02_edit_distance_cost x02_edit_distance_cost.cpp)
