--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,3 +3,4 @@ include_directories(${edit_distance_SOURCE_DIR}/include)
 add_executable(x01_edit_distance x01_edit_distance.cpp)
 add_executable(x02_edit_distance_cost x02_edit_distance_cost.cpp)
 add_executable(x03_edit_distance_sequences x03_edit_distance_sequences.cpp)
+add_executable(x04_edit_alignment x04_edit_alignment.cpp)
