--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,3 +4,4 @@ add_executable(x01_edit_distance x01_edit_distance.cpp)
 add_executable(x02_edit_distance_cost x02_edit_distance_cost.cpp)
 add_executable(x03_edit_distance_sequences x03_edit_distance_sequences.cpp)
 add_executable(x04_edit_alignment x04_edit_alignment.cpp)
+add_executable(x05_edit_alignment_cost x05_edit_alignment_cost.cpp)
