x06_edit_alignment_adaptors.cpp

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,3 +5,4 @@ add_executable(x02_edit_distance_cost x02_edit_distance_cost.cpp)
 add_executable(x03_edit_distance_sequences x03_edit_distance_sequences.cpp)
 add_executable(x04_edit_alignment x04_edit_alignment.cpp)
 add_executable(x05_edit_alignment_cost x05_edit_alignment_cost.cpp)
+add_executable(x06_edit_alignment_adaptors x06_edit_alignment_adaptors.cpp)
