--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable(x03_edit_distance_sequences x03_edit_distance_sequences.cpp)
 add_executable(x04_edit_alignment x04_edit_alignment.cpp)
 add_executable(x05_edit_alignment_cost x05_edit_alignment_cost.cpp)
 add_executable(x06_edit_alignment_adaptors x06_edit_alignment_adaptors.cpp)
+add_executable(x07_edit_alignment_sequences x07_edit_alignment_sequences.cpp)
