get building with boost::pool and boost::heap

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,9 +1,18 @@
+find_package(Boost 1.50 COMPONENTS system)
+
 include_directories(${edit_distance_SOURCE_DIR}/include)
 
-add_executable(x01_edit_distance x01_edit_distance.cpp)
-add_executable(x02_edit_distance_cost x02_edit_distance_cost.cpp)
-add_executable(x03_edit_distance_sequences x03_edit_distance_sequences.cpp)
-add_executable(x04_edit_alignment x04_edit_alignment.cpp)
-add_executable(x05_edit_alignment_cost x05_edit_alignment_cost.cpp)
-add_executable(x06_edit_alignment_adaptors x06_edit_alignment_adaptors.cpp)
-add_executable(x07_edit_alignment_sequences x07_edit_alignment_sequences.cpp)
+macro(add_example name)
+    add_executable(${name} ${name}.cpp)
+    target_link_libraries(${name} ${Boost_LIBRARIES})
+endmacro()
+
+if (Boost_FOUND)
+    add_example(x01_edit_distance)
+    add_example(x02_edit_distance_cost)
+    add_example(x03_edit_distance_sequences)
+    add_example(x04_edit_alignment)
+    add_example(x05_edit_alignment_cost)
+    add_example(x06_edit_alignment_adaptors)
+    add_example(x07_edit_alignment_sequences)
+endif ()
