--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ include_directories(${edit_distance_SOURCE_DIR}/include)
 add_executable(test
                test.cpp
                edit_distance.cpp
-               edit_alignment.cpp
+               edit_distance_script.cpp
               )
 include_directories(${Boost_INCLUDE_DIR})
 target_link_libraries(test ${Boost_LIBRARIES})
