test/test.cpp -> test/edit_distance_test.cpp

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 include_directories(${edit_distance_SOURCE_DIR}/include)
 
 add_executable(test
-               test.cpp
+               edit_distance_test.cpp
                edit_distance.cpp
                edit_distance_script.cpp
               )
