rename examples with boost convention names

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,9 +5,9 @@ macro(add_example name)
     target_link_libraries(${name} ${Boost_LIBRARIES})
 endmacro()
 
-add_example(x01_edit_distance)
-add_example(x02_edit_distance_cost)
-add_example(x03_edit_distance_sequences)
-add_example(x04_edit_alignment)
-add_example(x05_edit_alignment_cost)
-add_example(x06_edit_alignment_sequences)
+add_example(edit_distance_example)
+add_example(edit_distance_cost_example)
+add_example(edit_distance_range_example)
+add_example(edit_script_example)
+add_example(edit_script_cost_example)
+add_example(edit_script_range_example)
