edit_distance_diff_example.cpp

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -11,3 +11,4 @@ add_example(edit_distance_range_example)
 add_example(edit_script_example)
 add_example(edit_script_cost_example)
 add_example(edit_script_range_example)
+add_example(edit_distance_diff_example)
